--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -32,7 +32,7 @@
     <h3 class="modal-title">Excluir Tarefa?</h3>
     <p class="modal-message">
       Tem certeza que deseja excluir a tarefa:
-      <strong>{{ taskToDelete?.title }}</strong>?
+      <strong>{{ taskToDelete.title }}</strong>?
       <br />
       Esta ação não pode ser desfeita.
     </p>
